--- a/css/styles.css
+++ b/css/styles.css
@@ -413,6 +413,7 @@ h1 {
 .container-footer {
     display: flex;
     align-items: baseline;
+    justify-content: space-between;
 }
 
 .footer-logo {
