--- a/css/styles.css
+++ b/css/styles.css
@@ -414,6 +414,10 @@ h1 {
     display: flex;
     align-items: baseline;
     justify-content: space-between;
+    .footer-socials {
+            position: relative;
+            left: -100px;
+        }
 }
 
 .footer-logo {
@@ -471,6 +475,7 @@ h1 {
     display: flex;
     flex-direction: column;
     color: #ffffff;
+    margin-left: -100px;
 }
 
 .subscribe-text {
@@ -483,7 +488,7 @@ h1 {
 
 .subscribe-form {
     display: flex;
-    gap: 24px;
+    gap: 80px;
     align-items: center;
 }
 
@@ -492,7 +497,7 @@ h1 {
 }
 
 .subscribe-input {
-    width: 264px;
+    width: 230px;
     height: 40px;
     border: 1px solid #ffffff;
     background-color: transparent;
